@@ -11,5 +11,6 @@ noinst_LTLIBRARIES = libbackground.la
 
 libbackground_la_SOURCES = \
 	applier.c	applier.h	\
-	preferences.c	preferences.h
-
+	preferences.c	preferences.h   \
+	preview-file-selection.c	preview-file-selection.h
+	
