@@ -1,3 +1,12 @@
+2002-03-09  Richard Hestilow  <hestilow@ximian.com>
+
+	* preview-file-selection.[ch]: Added.
+
+	* Makefile.am: Compile preview-file-selection.c.
+	
+	* preferences.c (bg_preferences_init): Initialize adjust_opacity
+	to FALSE.
+
 2002-03-03  Alexander Larsson  <alla@lysator.liu.se>
 
 	* preferences.c (bg_preferences_save):
